--- a/requirements-notebooks.txt
+++ b/requirements-notebooks.txt
@@ -1,8 +1,12 @@
 bs4==0.0.2
+fasttext==0.9.3
 google_play_scraper==1.2.7
+huggingface_hub==0.26.2
 ipykernel==6.29.5
+ipywidgets==8.1.5
 matplotlib==3.9.2
 nltk==3.9.1
+numpy==1.26.4
 pandas==2.2.3
 pyLDAvis==3.4.1
 scikit-learn==1.5.2
