--- a/requirements-notebooks.txt
+++ b/requirements-notebooks.txt
@@ -5,6 +5,7 @@ huggingface_hub==0.26.2
 ipykernel==6.29.5
 ipywidgets==8.1.5
 matplotlib==3.9.2
+mlflow==2.17.2
 nltk==3.9.1
 numpy==1.26.4
 pandas==2.2.3
