--- a/requirements-notebooks.txt
+++ b/requirements-notebooks.txt
@@ -11,6 +11,7 @@ numpy==1.26.4
 pandas==2.2.3
 pyLDAvis==3.4.1
 scikit-learn==1.5.2
+scipy==1.12.0
 seaborn==0.13.2
 spacy==3.8.2
 torch==2.5.1+cu124
